--- a/src/html/main.html
+++ b/src/html/main.html
@@ -42,15 +42,16 @@
         var year = 2000;
 
         $(document).ready(function() {
-            var filtered = filterRecords(records, year, year + 5, 0, 4.5);
+            var filtered = filterRecords(records, year, year + 5, 5.0, 7.0);
             showEpicenterMap(filtered, ColorRule, RadiusRule);
-            setupBarChart(filtered);
+            setupBarChart();
+            updateBarChart(filtered, year, year + 5);
             year++;
         });
 
         function update() {
-            filtered = filterRecords(records, year, year + 5, 0, 4.5);
-            updateBarChart(filtered);
+            filtered = filterRecords(records, year, year + 5, 5.0, 7.0);
+            updateBarChart(filtered, year, year + 5);
             if (year + 5 < 2017)
                 year++;
         }
