--- a/src/html/main.html
+++ b/src/html/main.html
@@ -4,18 +4,17 @@
 <head>
     <title>Earthquake Data Analysis Tool</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../../lib/d3.v3.min.js" charset="utf-8"></script>
-    <script src="../js/common.js" charset="utf-8"></script>
-    <script src="../js/scatterplot.js" charset="utf-8"></script>
-    <script src="../js/barchart.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="../css/d3.slider.css">
+
 </head>
 
 <body>
     <div>
         <nav>
-            <p>Add range selection bars for period and magnitude.</p>
-
+            <h4>Range of Year</h4>
+            <div id="year-slider"></div>
+            <h4>Range of Magnitude</h4>
+            <div id="magnitude-slider"></div>
         </nav>
         <section style="width: 100%">
             <table id="main-interface">
@@ -25,7 +24,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <button onclick="update()">Update Charts</button>
+                        <button id="update">Update Charts</button>
                     </td>
                     <td>
                         <p>mean(magnitude) = <span id="mean-magnitude"></span>, #(occurrence) = <span id="num-occurrences"></span></p>
@@ -33,32 +32,15 @@
                 </tr>
             </table>
         </section>
-        <aside>
-
-        </aside>
-
     </div>
-    <script>
-        var year = 2000;
-
-        $(document).ready(function() {
-            var filtered = filterRecords(records, year, year + 5, 5.0, 7.0);
-            console.log(filtered);
-            setupEpicenterMap(ColorRule, RadiusRule);
-            setupBarChart();
-            updateEpicenterMap(filtered);
-            updateBarChart(filtered, year, year + 5);
-            year++;
-        });
-
-        function update() {
-            filtered = filterRecords(records, year, year + 5, 1.0, 7.0);
-            updateEpicenterMap(filtered);
-            updateBarChart(filtered, year, year + 5);
-            if (year + 5 < 2017)
-                year++;
-        }
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="../../lib/d3.v3.min.js" charset="utf-8"></script>
+    <script src="../js/main.js" charset="utf-8"></script>
+    <script src="../js/d3.slider.js" charset="utf-8"></script>
+    <script src="../js/earthquake_data.js" charset="utf-8"></script>
+    <script src="../js/common.js" charset="utf-8"></script>
+    <script src="../js/scatterplot.js" charset="utf-8"></script>
+    <script src="../js/barchart.js" charset="utf-8"></script>
 </body>
 
 </html>
