commit current state

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -27,6 +27,7 @@
                         <button id="update">Update Charts</button>
                     </td>
                     <td>
+                        <a href="http://www.openstreetmap.org/#map=9/31.23/30.05">View a map on OpenStreetMap</a>
                         <p>mean(magnitude) = <span id="mean-magnitude"></span>, #(occurrence) = <span id="num-occurrences"></span></p>
                     </td>
                 </tr>
