[eaqrthquakeMap] add transition

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -60,7 +60,7 @@
     <script src="../../lib/d3.v3.min.js" charset="utf-8"></script>
     <script src="../js/main.js" charset="utf-8"></script>
     <script src="../js/d3.slider.js" charset="utf-8"></script>
-    <script src="../js/earthquake_data.js" charset="utf-8"></script>
+    <script src="../js/earthquakeData.js" charset="utf-8"></script>
     <script src="../js/common.js" charset="utf-8"></script>
     <script src="../js/scatterplot.js" charset="utf-8"></script>
     <script src="../js/barchart.js" charset="utf-8"></script>
