fix bug at brush clear; modified layout addressing the comments

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -15,7 +15,7 @@
         </p>
     </header>
     <div>
-        <section style="width: 100%">
+        <section style="width: 100%; float: center;">
             <table id="main-interface">
                 <tr>
                     <td class="chart-background" rowspan="3">
