[earthquakeMap] add radio button

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -23,7 +23,7 @@
                         <div id="epicenter-plot" class="chart"></div>
                     </td>
                     <td class="chart-background">
-                        <p class="chart-title">Statistics by Year/Magnitude/Region</p>
+                        <p class="chart-title" id="bar-chart-title">Statistics by Year/Magnitude/Region</p>
                         <div id="yearly-statistics" class="chart"></div>
                         <div id="pie-charts" style="min-height: 50%;">
                             <p class="chart-title">Pie Charts</p>
