--- a/src/html/main.html
+++ b/src/html/main.html
@@ -25,6 +25,7 @@
                     <td class="chart-background">
                         <p class="chart-title" id="bar-chart-title">Statistics by Year/Magnitude/Region</p>
                         <div id="yearly-statistics" class="chart"></div>
+                        <div id="regional-statistics" class="chart"></div>
                         <div id="pie-charts" style="min-height: 50%;">
                             <p class="chart-title">Pie Charts</p>
                         </div>
