implement pie chart

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -26,9 +26,7 @@
                         <p class="chart-title" id="bar-chart-title">Statistics by Year/Magnitude/Region</p>
                         <div id="yearly-statistics" class="chart"></div>
                         <div id="regional-statistics" class="chart"></div>
-                        <div id="pie-charts" style="min-height: 50%;">
-                            <p class="chart-title">Pie Charts</p>
-                        </div>
+                        <div id="pie-charts" style="min-height: 50%;"></div>
                     </td>
                 </tr>
                 <!--<tr>
@@ -70,6 +68,7 @@
     <script src="../js/common.js" charset="utf-8"></script>
     <script src="../js/scatterplot.js" charset="utf-8"></script>
     <script src="../js/barchart.js" charset="utf-8"></script>
+    <script src="../js/piechart.js" charset="utf-8"></script>
 </body>
 
 </html>
