--- a/src/html/main.html
+++ b/src/html/main.html
@@ -69,6 +69,7 @@
     <script src="../js/common.js" charset="utf-8"></script>
     <script src="../js/scatterplot.js" charset="utf-8"></script>
     <script src="../js/barchart.js" charset="utf-8"></script>
+    <script src="../js/nuclear.js" charset="utf-8"></script>
 </body>
 
 </html>
