--- a/src/html/main.html
+++ b/src/html/main.html
@@ -23,10 +23,15 @@
                         <div id="epicenter-plot" class="chart"></div>
                     </td>
                     <td class="chart-background">
-                        <p class="chart-title" id="bar-chart-title">Statistics by Year/Magnitude/Region</p>
-                        <div id="yearly-statistics" class="chart"></div>
-                        <div id="regional-statistics" class="chart"></div>
-                        <div id="pie-charts" style="min-height: 50%;"></div>
+                        <div id="yearly-statistics" class="chart">
+                            <h2>연도별 통계</h2>
+                        </div>
+                        <div id="regional-statistics" class="chart">
+                            <h2>지역별 통계</h2>
+                        </div>
+                        <div id="pie-charts" class="chart" style="min-height: 50%;">
+                            <h2>규모별 통계</h2>
+                        </div>
                     </td>
                 </tr>
                 <!--<tr>
