--- a/src/html/main.html
+++ b/src/html/main.html
@@ -11,7 +11,7 @@
 <body>
     <header style="height: 100%; width: 100%;">
         <p id="main-title">
-            Korean Earthquakes
+            한국 지진 데이터 시각화
         </p>
     </header>
     <div>
@@ -19,7 +19,7 @@
             <table id="main-interface">
                 <tr>
                     <td class="chart-background" rowspan="3">
-                        <p id="epicenter-map-title" class="chart-title">Epicenter Map</p>
+                        <p id="epicenter-map-title" class="chart-title">진앙 분포도</p>
                         <div id="epicenter-plot" class="chart"></div>
                     </td>
                     <td class="chart-background">
@@ -45,7 +45,7 @@
                         <table max-height="200px">
                             <tr>
                                 <td>
-                                    <h3 style="padding: 0px 10px; text-align: center;">Range of Year</h3>
+                                    <h3 style="padding: 0px 10px; text-align: center;">발생 연도 범위</h3>
                                 </td>
                                 <td>
                                     <div id="year-slider" style="padding: 0px 10px;"></div>
@@ -53,7 +53,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <h3 style="padding: 0px 10px; text-align: center;">Range of Magnitude</h3>
+                                    <h3 style="padding: 0px 10px; text-align: center;">규모 범위</h3>
                                 </td>
                                 <td>
                                     <div id="magnitude-slider" style="padding: 0px 10px;"></div>
