enlarge font size

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -19,7 +19,7 @@
             <table id="main-interface">
                 <tr>
                     <td class="chart-background" rowspan="3">
-                        <p id="epicenter-map-title" class="chart-title">진앙 분포도</p>
+                        <h2 id="epicenter-map-title" class="chart-title">진앙 분포도</h2>
                         <div id="epicenter-plot" class="chart"></div>
                     </td>
                     <td class="chart-background">
@@ -45,7 +45,7 @@
                         <table max-height="200px">
                             <tr>
                                 <td>
-                                    <h3 style="padding: 0px 10px; text-align: center;">발생 연도 범위</h3>
+                                    <h3 style="padding: 0px 10px; font-size: 24px; text-align: center;">발생 연도 범위</h3>
                                 </td>
                                 <td>
                                     <div id="year-slider" style="padding: 0px 10px;"></div>
@@ -53,7 +53,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <h3 style="padding: 0px 10px; text-align: center;">규모 범위</h3>
+                                    <h3 style="padding: 0px 10px; font-size: 24px;  text-align: center;">규모 범위</h3>
                                 </td>
                                 <td>
                                     <div id="magnitude-slider" style="padding: 0px 10px;"></div>
