relocate main.html (renamed with index.html) to root dir

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Earthquake Data Analysis Tool</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../css/d3.slider.css">
+    <link rel="stylesheet" type="text/css" href="./src/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./src/css/d3.slider.css">
 
 </head>
 
@@ -66,14 +66,14 @@
         </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../../lib/d3.v3.min.js" charset="utf-8"></script>
-    <script src="../js/main.js" charset="utf-8"></script>
-    <script src="../js/d3.slider.js" charset="utf-8"></script>
-    <script src="../js/earthquakeData.js" charset="utf-8"></script>
-    <script src="../js/common.js" charset="utf-8"></script>
-    <script src="../js/scatterplot.js" charset="utf-8"></script>
-    <script src="../js/barchart.js" charset="utf-8"></script>
-    <script src="../js/piechart.js" charset="utf-8"></script>
+    <script src="./lib/d3.v3.min.js" charset="utf-8"></script>
+    <script src="./src/js/main.js" charset="utf-8"></script>
+    <script src="./src/js/d3.slider.js" charset="utf-8"></script>
+    <script src="./src/js/earthquakeData.js" charset="utf-8"></script>
+    <script src="./src/js/common.js" charset="utf-8"></script>
+    <script src="./src/js/scatterplot.js" charset="utf-8"></script>
+    <script src="./src/js/barchart.js" charset="utf-8"></script>
+    <script src="./src/js/piechart.js" charset="utf-8"></script>
 </body>
 
 </html>
